# data-science-refactor

./: .gitignore  README.md
in-progress/: config.py  main.py  pyproject.toml  requirements.txt
in-progress/conf/: callbacks.yaml  config.yaml  meta_config.yaml
in-progress/conf/files/: dataset1.yaml  dataset2.yaml  dataset3.yaml
in-progress/conf/optimizer/: adam.yaml  sgd.yaml
in-progress/src/: config_parser.py  dataset.py  hydra_callbacks.py  load_data.py  metrics.py  models.py  optimizers.py  runner.py  tensorboard.py  tracking.py  utils.py
