[tool.poetry]
name = "in-progress"
version = "0.1.0"
description = ""
authors = ["Pini Koplovitch <pini.koplovitch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "1.21.2"
pandas = "1.3.2"
scikit-learn = "0.24.2"
matplotlib = "3.4.3"
tensorboard = "2.6.0"
mlflow = "1.19.0"
tqdm = "4.62.1"
pillow = "8.3.1"
torch = "~1.9.0+cu118"
protobuf = "<=3.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
